Re-run all notebooks

--- a/docs/guide/saving_loading_populations.ipynb
+++ b/docs/guide/saving_loading_populations.ipynb
@@ -48,77 +48,77 @@
      "output_type": "stream",
      "text": [
       "Generation 1/10 [//////                                            ]\n",
-      "Train Loss (Med): 14.24093 (74.37032)\n",
-      "Val Loss (Med): 14.24093 (74.37032)\n",
-      "Median Size (Max): 3 (22)\n",
-      "Median complexity (Max): 9 (4908)\n",
-      "Time (s): 0.07323\n",
+      "Train Loss (Med): 14.64283 (60.79966)\n",
+      "Val Loss (Med): 14.64283 (60.79966)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 20 (15560)\n",
+      "Time (s): 0.87593\n",
       "\n",
       "Generation 2/10 [///////////                                       ]\n",
-      "Train Loss (Med): 14.24093 (23.13980)\n",
-      "Val Loss (Med): 14.24093 (23.13980)\n",
-      "Median Size (Max): 3 (19)\n",
-      "Median complexity (Max): 9 (1371)\n",
-      "Time (s): 0.11640\n",
+      "Train Loss (Med): 13.86046 (17.94969)\n",
+      "Val Loss (Med): 13.86046 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 20 (15560)\n",
+      "Time (s): 1.37879\n",
       "\n",
       "Generation 3/10 [////////////////                                  ]\n",
-      "Train Loss (Med): 14.24093 (22.09653)\n",
-      "Val Loss (Med): 14.24093 (22.09653)\n",
-      "Median Size (Max): 3 (12)\n",
-      "Median complexity (Max): 9 (219)\n",
-      "Time (s): 0.16538\n",
+      "Train Loss (Med): 11.77568 (17.94969)\n",
+      "Val Loss (Med): 11.77568 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 20 (15560)\n",
+      "Time (s): 1.78826\n",
       "\n",
       "Generation 4/10 [/////////////////////                             ]\n",
-      "Train Loss (Med): 14.24093 (17.94969)\n",
-      "Val Loss (Med): 14.24093 (17.94969)\n",
-      "Median Size (Max): 3 (12)\n",
-      "Median complexity (Max): 9 (219)\n",
-      "Time (s): 0.21108\n",
+      "Train Loss (Med): 11.77568 (17.94969)\n",
+      "Val Loss (Med): 11.77568 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 20 (15560)\n",
+      "Time (s): 2.33805\n",
       "\n",
       "Generation 5/10 [//////////////////////////                        ]\n",
-      "Train Loss (Med): 14.24093 (17.94969)\n",
-      "Val Loss (Med): 14.24093 (17.94969)\n",
-      "Median Size (Max): 3 (12)\n",
-      "Median complexity (Max): 9 (219)\n",
-      "Time (s): 0.26743\n",
+      "Train Loss (Med): 11.77568 (17.94969)\n",
+      "Val Loss (Med): 11.77568 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 20 (8024)\n",
+      "Time (s): 2.89530\n",
       "\n",
       "Generation 6/10 [///////////////////////////////                   ]\n",
-      "Train Loss (Med): 14.24093 (17.94969)\n",
-      "Val Loss (Med): 14.24093 (17.94969)\n",
-      "Median Size (Max): 3 (12)\n",
-      "Median complexity (Max): 9 (219)\n",
-      "Time (s): 0.32566\n",
+      "Train Loss (Med): 11.77568 (17.94969)\n",
+      "Val Loss (Med): 11.77568 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 20 (8024)\n",
+      "Time (s): 3.36097\n",
       "\n",
       "Generation 7/10 [////////////////////////////////////              ]\n",
-      "Train Loss (Med): 14.24093 (17.94969)\n",
-      "Val Loss (Med): 14.24093 (17.94969)\n",
-      "Median Size (Max): 3 (12)\n",
-      "Median complexity (Max): 9 (219)\n",
-      "Time (s): 0.37884\n",
+      "Train Loss (Med): 11.77568 (17.94969)\n",
+      "Val Loss (Med): 11.77568 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 44 (8024)\n",
+      "Time (s): 3.82193\n",
       "\n",
       "Generation 8/10 [/////////////////////////////////////////         ]\n",
-      "Train Loss (Med): 14.24093 (90.38514)\n",
-      "Val Loss (Med): 14.24093 (90.38514)\n",
-      "Median Size (Max): 1 (12)\n",
-      "Median complexity (Max): 4 (219)\n",
-      "Time (s): 0.42590\n",
+      "Train Loss (Med): 11.77568 (17.90349)\n",
+      "Val Loss (Med): 11.77568 (17.90349)\n",
+      "Median Size (Max): 4 (18)\n",
+      "Median complexity (Max): 43 (8024)\n",
+      "Time (s): 4.55869\n",
       "\n",
       "Generation 9/10 [//////////////////////////////////////////////    ]\n",
-      "Train Loss (Med): 14.24093 (90.38514)\n",
-      "Val Loss (Med): 14.24093 (90.38514)\n",
-      "Median Size (Max): 1 (12)\n",
-      "Median complexity (Max): 1 (219)\n",
-      "Time (s): 0.47438\n",
+      "Train Loss (Med): 11.77568 (17.94969)\n",
+      "Val Loss (Med): 11.77568 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 20 (8024)\n",
+      "Time (s): 5.39915\n",
       "\n",
       "Generation 10/10 [//////////////////////////////////////////////////]\n",
-      "Train Loss (Med): 14.24093 (90.38514)\n",
-      "Val Loss (Med): 14.24093 (90.38514)\n",
-      "Median Size (Max): 1 (10)\n",
-      "Median complexity (Max): 4 (72)\n",
-      "Time (s): 0.52274\n",
+      "Train Loss (Med): 11.77568 (17.85729)\n",
+      "Val Loss (Med): 11.77568 (17.85729)\n",
+      "Median Size (Max): 5 (18)\n",
+      "Median complexity (Max): 72 (8024)\n",
+      "Time (s): 5.93025\n",
       "\n",
-      "Saved population to file /tmp/tmpu48k79k9/population.json\n",
-      "score: 0.8424417086444611\n"
+      "Saved population to file /tmp/tmppxya4ppz/population.json\n",
+      "score: 0.8697166515608646\n"
      ]
     }
    ],
@@ -161,10 +161,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded population from /tmp/tmpu48k79k9/population.json of size = 200\n",
+      "Loaded population from /tmp/tmppxya4ppz/population.json of size = 200\n",
       "Completed 100% [====================]\n",
       "saving final population as archive...\n",
-      "score: 0.878504366853407\n"
+      "score: 0.8779534547126954\n"
      ]
     }
    ],
@@ -203,9 +203,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded population from /tmp/tmpu48k79k9/population.json of size = 200\n",
+      "Loaded population from /tmp/tmppxya4ppz/population.json of size = 200\n",
       "Completed 100% [====================]\n",
-      "{'complexity': 324, 'crowding_dist': 3.4028234663852886e+38, 'dcounter': 0, 'depth': 3, 'dominated': [], 'linear_complexity': 26, 'loss': 10.409247398376465, 'loss_v': 10.409247398376465, 'rank': 1, 'size': 17, 'values': [10.409247398376465, 17.0], 'weights': [-1.0, -1.0], 'wvalues': [-10.409247398376465, -17.0]}\n"
+      "{'complexity': 8024, 'crowding_dist': 0.0, 'dcounter': 0, 'depth': 3, 'dominated': [], 'linear_complexity': 46, 'loss': 11.031192779541016, 'loss_v': 11.031192779541016, 'rank': 1, 'size': 18, 'values': [11.031192779541016, 18.0], 'weights': [-1.0, -1.0], 'wvalues': [-11.031192779541016, -18.0]}\n"
      ]
     }
    ],
@@ -256,79 +256,79 @@
      "output_type": "stream",
      "text": [
       "Generation 1/10 [//////                                            ]\n",
-      "Train Loss (Med): 0.62865 (0.65573)\n",
-      "Val Loss (Med): 0.62865 (0.65573)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 138 (17688)\n",
-      "Time (s): 0.07657\n",
+      "Train Loss (Med): 0.54850 (0.69315)\n",
+      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 128 (38816)\n",
+      "Time (s): 0.28640\n",
       "\n",
       "Generation 2/10 [///////////                                       ]\n",
-      "Train Loss (Med): 0.62321 (0.64989)\n",
-      "Val Loss (Med): 0.62321 (0.64989)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 138 (17688)\n",
-      "Time (s): 0.12758\n",
+      "Train Loss (Med): 0.54850 (0.69315)\n",
+      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 128 (38816)\n",
+      "Time (s): 0.48293\n",
       "\n",
       "Generation 3/10 [////////////////                                  ]\n",
-      "Train Loss (Med): 0.62114 (0.69315)\n",
-      "Val Loss (Med): 0.62114 (0.69315)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 27 (17688)\n",
-      "Time (s): 0.18094\n",
+      "Train Loss (Med): 0.54850 (0.69315)\n",
+      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 128 (38816)\n",
+      "Time (s): 0.67786\n",
       "\n",
       "Generation 4/10 [/////////////////////                             ]\n",
-      "Train Loss (Med): 0.62022 (0.69315)\n",
-      "Val Loss (Med): 0.62022 (0.69315)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 27 (17688)\n",
-      "Time (s): 0.22892\n",
+      "Train Loss (Med): 0.54850 (0.69315)\n",
+      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 128 (38816)\n",
+      "Time (s): 0.85627\n",
       "\n",
       "Generation 5/10 [//////////////////////////                        ]\n",
-      "Train Loss (Med): 0.61990 (0.69315)\n",
-      "Val Loss (Med): 0.61990 (0.69315)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 27 (17688)\n",
-      "Time (s): 0.27854\n",
+      "Train Loss (Med): 0.54847 (0.69315)\n",
+      "Val Loss (Med): 0.54847 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 128 (38816)\n",
+      "Time (s): 1.05582\n",
       "\n",
       "Generation 6/10 [///////////////////////////////                   ]\n",
-      "Train Loss (Med): 0.61968 (0.69315)\n",
-      "Val Loss (Med): 0.61968 (0.69315)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 27 (17688)\n",
-      "Time (s): 0.32916\n",
+      "Train Loss (Med): 0.54850 (0.69315)\n",
+      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 128 (38816)\n",
+      "Time (s): 1.24256\n",
       "\n",
       "Generation 7/10 [////////////////////////////////////              ]\n",
-      "Train Loss (Med): 0.61962 (0.69315)\n",
-      "Val Loss (Med): 0.61962 (0.69315)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 27 (17688)\n",
-      "Time (s): 0.37665\n",
+      "Train Loss (Med): 0.54850 (0.69315)\n",
+      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 80 (38816)\n",
+      "Time (s): 1.42772\n",
       "\n",
       "Generation 8/10 [/////////////////////////////////////////         ]\n",
-      "Train Loss (Med): 0.61955 (0.69315)\n",
-      "Val Loss (Med): 0.61955 (0.69315)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 27 (17688)\n",
-      "Time (s): 0.42730\n",
+      "Train Loss (Med): 0.54850 (0.69315)\n",
+      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 80 (38816)\n",
+      "Time (s): 1.60531\n",
       "\n",
       "Generation 9/10 [//////////////////////////////////////////////    ]\n",
-      "Train Loss (Med): 0.61950 (0.69315)\n",
-      "Val Loss (Med): 0.61950 (0.69315)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 27 (17688)\n",
-      "Time (s): 0.47329\n",
+      "Train Loss (Med): 0.54850 (0.69315)\n",
+      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 80 (38816)\n",
+      "Time (s): 1.79592\n",
       "\n",
       "Generation 10/10 [//////////////////////////////////////////////////]\n",
-      "Train Loss (Med): 0.61947 (0.69315)\n",
-      "Val Loss (Med): 0.61947 (0.69315)\n",
-      "Median Size (Max): 7 (12)\n",
-      "Median complexity (Max): 27 (17688)\n",
-      "Time (s): 0.52593\n",
+      "Train Loss (Med): 0.54850 (0.69315)\n",
+      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Median Size (Max): 5 (12)\n",
+      "Median complexity (Max): 80 (38816)\n",
+      "Time (s): 2.00546\n",
       "\n",
-      "Saved population to file /tmp/tmpq4vgpkd4/population.json\n",
+      "Saved population to file /tmp/tmp02qi2xms/population.json\n",
       "saving final population as archive...\n",
-      "Best model: 155.24*Logistic(Sum(-3.6533294,0.16*Logabs(0.00*AIDS)))\n",
-      "score: 0.6\n"
+      "Best model: Logistic(Sum(-0.44824797,If(AIDS>15890.50,8.96,0.00)))\n",
+      "score: 0.68\n"
      ]
     }
    ],
@@ -366,7 +366,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6"
+       "0.68"
       ]
      },
      "execution_count": 6,
@@ -389,9 +389,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded population from /tmp/tmpq4vgpkd4/population.json of size = 400\n",
+      "Loaded population from /tmp/tmp02qi2xms/population.json of size = 400\n",
       "Completed 100% [====================]\n",
-      "Best model: 1.00*Logistic(Sum(0.49994996,If(AIDS>15890.50,1.00*MeanLabel,0.00*MeanLabel)))\n",
+      "Best model: Logistic(Sum(10.211154,If(AIDS>15890.50,1.00 (MeanLabel),0.00 (MeanLabel))))\n",
       "score: 0.5\n"
      ]
     }
@@ -431,7 +431,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitness(0.708266 495.000000 )\n"
+      "Fitness(0.610935 1952.000000 )\n"
      ]
     }
    ],
@@ -891,14 +891,14 @@
        "                functions=[&#x27;SplitBest&#x27;, &#x27;Add&#x27;, &#x27;Mul&#x27;, &#x27;Sin&#x27;, &#x27;Cos&#x27;, &#x27;Exp&#x27;,\n",
        "                           &#x27;Logabs&#x27;],\n",
        "                initialization=&#x27;uniform&#x27;,\n",
-       "                load_population=&#x27;/tmp/tmpq4vgpkd4/population.json&#x27;, logfile=&#x27;&#x27;,\n",
+       "                load_population=&#x27;/tmp/tmp02qi2xms/population.json&#x27;, logfile=&#x27;&#x27;,\n",
        "                max_depth=3, max_gens=10, max_size=20, max_stall=0, max_time=-1,\n",
        "                mig_prob=0.05, mode=&#x27;classification&#x27;,\n",
        "                m...\n",
        "                                &#x27;subtree&#x27;: 0.16666666666666666,\n",
        "                                &#x27;toggle_weight_off&#x27;: 0.16666666666666666,\n",
        "                                &#x27;toggle_weight_on&#x27;: 0.16666666666666666},\n",
-       "                n_jobs=1, num_islands=1, objectives=[&#x27;error&#x27;, &#x27;complexity&#x27;],\n",
+       "                n_jobs=1, num_islands=5, objectives=[&#x27;error&#x27;, &#x27;complexity&#x27;],\n",
        "                pop_size=200, random_state=None, save_population=&#x27;&#x27;,\n",
        "                scorer=&#x27;average_precision_score&#x27;, sel=&#x27;lexicase&#x27;,\n",
        "                shuffle_split=True, surv=&#x27;nsga2&#x27;, use_arch=True,\n",
@@ -907,14 +907,14 @@
        "                functions=[&#x27;SplitBest&#x27;, &#x27;Add&#x27;, &#x27;Mul&#x27;, &#x27;Sin&#x27;, &#x27;Cos&#x27;, &#x27;Exp&#x27;,\n",
        "                           &#x27;Logabs&#x27;],\n",
        "                initialization=&#x27;uniform&#x27;,\n",
-       "                load_population=&#x27;/tmp/tmpq4vgpkd4/population.json&#x27;, logfile=&#x27;&#x27;,\n",
+       "                load_population=&#x27;/tmp/tmp02qi2xms/population.json&#x27;, logfile=&#x27;&#x27;,\n",
        "                max_depth=3, max_gens=10, max_size=20, max_stall=0, max_time=-1,\n",
        "                mig_prob=0.05, mode=&#x27;classification&#x27;,\n",
        "                m...\n",
        "                                &#x27;subtree&#x27;: 0.16666666666666666,\n",
        "                                &#x27;toggle_weight_off&#x27;: 0.16666666666666666,\n",
        "                                &#x27;toggle_weight_on&#x27;: 0.16666666666666666},\n",
-       "                n_jobs=1, num_islands=1, objectives=[&#x27;error&#x27;, &#x27;complexity&#x27;],\n",
+       "                n_jobs=1, num_islands=5, objectives=[&#x27;error&#x27;, &#x27;complexity&#x27;],\n",
        "                pop_size=200, random_state=None, save_population=&#x27;&#x27;,\n",
        "                scorer=&#x27;average_precision_score&#x27;, sel=&#x27;lexicase&#x27;,\n",
        "                shuffle_split=True, surv=&#x27;nsga2&#x27;, use_arch=True,\n",
@@ -926,14 +926,14 @@
        "                functions=['SplitBest', 'Add', 'Mul', 'Sin', 'Cos', 'Exp',\n",
        "                           'Logabs'],\n",
        "                initialization='uniform',\n",
-       "                load_population='/tmp/tmpq4vgpkd4/population.json', logfile='',\n",
+       "                load_population='/tmp/tmp02qi2xms/population.json', logfile='',\n",
        "                max_depth=3, max_gens=10, max_size=20, max_stall=0, max_time=-1,\n",
        "                mig_prob=0.05, mode='classification',\n",
        "                m...\n",
        "                                'subtree': 0.16666666666666666,\n",
        "                                'toggle_weight_off': 0.16666666666666666,\n",
        "                                'toggle_weight_on': 0.16666666666666666},\n",
-       "                n_jobs=1, num_islands=1, objectives=['error', 'complexity'],\n",
+       "                n_jobs=1, num_islands=5, objectives=['error', 'complexity'],\n",
        "                pop_size=200, random_state=None, save_population='',\n",
        "                scorer='average_precision_score', sel='lexicase',\n",
        "                shuffle_split=True, surv='nsga2', use_arch=True,\n",
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1001,20 +1001,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 468, 'y_pred': array([False, False, False, False, False, False, False, False, False,\n",
+      "{'id': 505, 'y_pred': array([False, False, False, False, False, False, False, False, False,\n",
       "       False, False, False, False, False, False, False, False, False,\n",
       "       False, False, False, False, False, False, False, False, False,\n",
       "       False, False, False, False, False, False, False, False, False,\n",
       "       False, False, False, False, False, False, False, False, False,\n",
       "       False, False, False, False, False])}\n",
-      "{'id': 468, 'y_pred': array([False, False, False, False, False, False, False, False, False,\n",
+      "{'id': 505, 'y_pred': array([False, False, False, False, False, False, False, False, False,\n",
       "       False, False, False, False, False, False, False, False, False,\n",
       "       False, False, False, False, False, False, False, False, False,\n",
       "       False, False, False, False, False, False, False, False, False,\n",
