--- a/docs/guide/search_space.ipynb
+++ b/docs/guide/search_space.ipynb
@@ -217,7 +217,7 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00*MeanLabel\"]}\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00 (MeanLabel)\"]}\n",
       "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623, 0.056145623]}\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
       "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "77d94281",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00*MeanLabel\"]}\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00 (MeanLabel)\"]}\n",
       "terminal_weights: {\"ArrayI\": [1, 1], \"ArrayB\": [1, 1], \"ArrayF\": [1, 1, 1]}\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
       "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1c8c72c1",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00*MeanLabel\"]}\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00 (MeanLabel)\"]}\n",
       "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623, 0.056145623]}\n",
       "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
       "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "3a68b9eb",
    "metadata": {},
    "outputs": [
@@ -367,8 +367,8 @@
      "text": [
       "Completed 100% [====================]\n",
       "saving final population as archive...\n",
-      "Best model: If(x_0>0.50,Sub(-0.00*x_0,-8.32*MeanLabel),9.04*MeanLabel)\n",
-      "score: 0.0035742075340854385\n"
+      "Best model: If(x_0>0.50,If(x_0>1.50,8.22 (MeanLabel),5.77 (MeanLabel)),9.04 (MeanLabel))\n",
+      "score: 0.005547028016814393\n"
      ]
     }
    ],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "bcfc0903",
    "metadata": {},
    "outputs": [
@@ -401,15 +401,15 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00*MeanLabel\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.77648646, 0.6043145], \"ArrayB\": [0.8667038, 0.8644027], \"ArrayF\": [0.06445073, 0.7268156, 0.7447441]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00 (MeanLabel)\"]}\n",
+      "terminal_weights: {\"ArrayI\": [0.7924935, 0.72817105], \"ArrayB\": [0.267997, 0.7070786], \"ArrayF\": [0.15395644, 0.030588487, 0.51047236]}\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.4767878\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2614297\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.34491467\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.097810574\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 0.13077843\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.18309806\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.34577334\n",
       "\n"
      ]
     }
