re-run doc notebooks

--- a/docs/guide/search_space.ipynb
+++ b/docs/guide/search_space.ipynb
@@ -402,14 +402,14 @@
      "text": [
       "=== Search space ===\n",
       "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00 (MeanLabel)\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.7924935, 0.72817105], \"ArrayB\": [0.267997, 0.7070786], \"ArrayF\": [0.15395644, 0.030588487, 0.51047236]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.4767878\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2614297\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.34491467\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.097810574\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 0.13077843\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.18309806\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.34577334\n",
+      "terminal_weights: {\"ArrayI\": [0.1543845, 0.19821535], \"ArrayB\": [0.7745126, 0.5535547], \"ArrayF\": [0.063646674, 0.10489941, 0.4337296]}\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.47412002\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.639789\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.27693656\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.01410815\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 0.09998686\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.078102015\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.33191082\n",
       "\n"
      ]
     }
