--- a/docs/guide/saving_loading_populations.ipynb
+++ b/docs/guide/saving_loading_populations.ipynb
@@ -48,77 +48,77 @@
      "output_type": "stream",
      "text": [
       "Generation 1/10 [//////                                            ]\n",
-      "Train Loss (Med): 14.64283 (60.79966)\n",
-      "Val Loss (Med): 14.64283 (60.79966)\n",
-      "Median Size (Max): 3 (18)\n",
-      "Median complexity (Max): 20 (15560)\n",
-      "Time (s): 0.87593\n",
+      "Train Loss (Med): 10.84173 (60.79966)\n",
+      "Val Loss (Med): 10.84173 (60.79966)\n",
+      "Median Size (Max): 3 (19)\n",
+      "Median complexity (Max): 20 (13448)\n",
+      "Time (s): 0.48435\n",
       "\n",
       "Generation 2/10 [///////////                                       ]\n",
-      "Train Loss (Med): 13.86046 (17.94969)\n",
-      "Val Loss (Med): 13.86046 (17.94969)\n",
-      "Median Size (Max): 3 (18)\n",
-      "Median complexity (Max): 20 (15560)\n",
-      "Time (s): 1.37879\n",
+      "Train Loss (Med): 10.84173 (29.46077)\n",
+      "Val Loss (Med): 10.84173 (29.46077)\n",
+      "Median Size (Max): 4 (20)\n",
+      "Median complexity (Max): 20 (10392)\n",
+      "Time (s): 0.96259\n",
       "\n",
       "Generation 3/10 [////////////////                                  ]\n",
-      "Train Loss (Med): 11.77568 (17.94969)\n",
-      "Val Loss (Med): 11.77568 (17.94969)\n",
-      "Median Size (Max): 3 (18)\n",
-      "Median complexity (Max): 20 (15560)\n",
-      "Time (s): 1.78826\n",
+      "Train Loss (Med): 10.64540 (17.94969)\n",
+      "Val Loss (Med): 10.64540 (17.94969)\n",
+      "Median Size (Max): 3 (20)\n",
+      "Median complexity (Max): 20 (5960)\n",
+      "Time (s): 1.39985\n",
       "\n",
       "Generation 4/10 [/////////////////////                             ]\n",
-      "Train Loss (Med): 11.77568 (17.94969)\n",
-      "Val Loss (Med): 11.77568 (17.94969)\n",
-      "Median Size (Max): 3 (18)\n",
-      "Median complexity (Max): 20 (15560)\n",
-      "Time (s): 2.33805\n",
+      "Train Loss (Med): 10.64540 (17.94969)\n",
+      "Val Loss (Med): 10.64540 (17.94969)\n",
+      "Median Size (Max): 3 (19)\n",
+      "Median complexity (Max): 20 (5832)\n",
+      "Time (s): 1.87186\n",
       "\n",
       "Generation 5/10 [//////////////////////////                        ]\n",
-      "Train Loss (Med): 11.77568 (17.94969)\n",
-      "Val Loss (Med): 11.77568 (17.94969)\n",
-      "Median Size (Max): 3 (18)\n",
-      "Median complexity (Max): 20 (8024)\n",
-      "Time (s): 2.89530\n",
+      "Train Loss (Med): 10.64540 (17.94969)\n",
+      "Val Loss (Med): 10.64540 (17.94969)\n",
+      "Median Size (Max): 3 (17)\n",
+      "Median complexity (Max): 20 (1224)\n",
+      "Time (s): 2.35484\n",
       "\n",
       "Generation 6/10 [///////////////////////////////                   ]\n",
-      "Train Loss (Med): 11.77568 (17.94969)\n",
-      "Val Loss (Med): 11.77568 (17.94969)\n",
-      "Median Size (Max): 3 (18)\n",
-      "Median complexity (Max): 20 (8024)\n",
-      "Time (s): 3.36097\n",
+      "Train Loss (Med): 10.64540 (17.94969)\n",
+      "Val Loss (Med): 10.64540 (17.94969)\n",
+      "Median Size (Max): 3 (17)\n",
+      "Median complexity (Max): 20 (1224)\n",
+      "Time (s): 2.71283\n",
       "\n",
       "Generation 7/10 [////////////////////////////////////              ]\n",
-      "Train Loss (Med): 11.77568 (17.94969)\n",
-      "Val Loss (Med): 11.77568 (17.94969)\n",
-      "Median Size (Max): 3 (18)\n",
-      "Median complexity (Max): 44 (8024)\n",
-      "Time (s): 3.82193\n",
+      "Train Loss (Med): 10.64540 (17.94969)\n",
+      "Val Loss (Med): 10.64540 (17.94969)\n",
+      "Median Size (Max): 3 (17)\n",
+      "Median complexity (Max): 20 (1224)\n",
+      "Time (s): 3.14323\n",
       "\n",
       "Generation 8/10 [/////////////////////////////////////////         ]\n",
-      "Train Loss (Med): 11.77568 (17.90349)\n",
-      "Val Loss (Med): 11.77568 (17.90349)\n",
-      "Median Size (Max): 4 (18)\n",
-      "Median complexity (Max): 43 (8024)\n",
-      "Time (s): 4.55869\n",
+      "Train Loss (Med): 10.64540 (17.94969)\n",
+      "Val Loss (Med): 10.64540 (17.94969)\n",
+      "Median Size (Max): 3 (17)\n",
+      "Median complexity (Max): 20 (968)\n",
+      "Time (s): 3.55371\n",
       "\n",
       "Generation 9/10 [//////////////////////////////////////////////    ]\n",
-      "Train Loss (Med): 11.77568 (17.94969)\n",
-      "Val Loss (Med): 11.77568 (17.94969)\n",
-      "Median Size (Max): 3 (18)\n",
-      "Median complexity (Max): 20 (8024)\n",
-      "Time (s): 5.39915\n",
+      "Train Loss (Med): 10.26326 (16.75427)\n",
+      "Val Loss (Med): 10.26326 (16.75427)\n",
+      "Median Size (Max): 7 (19)\n",
+      "Median complexity (Max): 114 (5832)\n",
+      "Time (s): 4.02579\n",
       "\n",
       "Generation 10/10 [//////////////////////////////////////////////////]\n",
-      "Train Loss (Med): 11.77568 (17.85729)\n",
-      "Val Loss (Med): 11.77568 (17.85729)\n",
-      "Median Size (Max): 5 (18)\n",
-      "Median complexity (Max): 72 (8024)\n",
-      "Time (s): 5.93025\n",
+      "Train Loss (Med): 10.26326 (15.05465)\n",
+      "Val Loss (Med): 10.26326 (15.05465)\n",
+      "Median Size (Max): 9 (19)\n",
+      "Median complexity (Max): 232 (5832)\n",
+      "Time (s): 4.57407\n",
       "\n",
-      "Saved population to file /tmp/tmppxya4ppz/population.json\n",
-      "score: 0.8697166515608646\n"
+      "Saved population to file /tmp/tmp_r7icq5o/population.json\n",
+      "score: 0.8864496494920485\n"
      ]
     }
    ],
@@ -161,10 +161,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded population from /tmp/tmppxya4ppz/population.json of size = 200\n",
+      "Loaded population from /tmp/tmp_r7icq5o/population.json of size = 200\n",
       "Completed 100% [====================]\n",
       "saving final population as archive...\n",
-      "score: 0.8779534547126954\n"
+      "score: 0.8864496494920485\n"
      ]
     }
    ],
@@ -203,9 +203,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded population from /tmp/tmppxya4ppz/population.json of size = 200\n",
+      "Loaded population from /tmp/tmp_r7icq5o/population.json of size = 200\n",
       "Completed 100% [====================]\n",
-      "{'complexity': 8024, 'crowding_dist': 0.0, 'dcounter': 0, 'depth': 3, 'dominated': [], 'linear_complexity': 46, 'loss': 11.031192779541016, 'loss_v': 11.031192779541016, 'rank': 1, 'size': 18, 'values': [11.031192779541016, 18.0], 'weights': [-1.0, -1.0], 'wvalues': [-11.031192779541016, -18.0]}\n"
+      "{'complexity': 5832, 'crowding_dist': 0.0, 'dcounter': 0, 'depth': 3, 'dominated': [], 'linear_complexity': 39, 'loss': 10.263264656066895, 'loss_v': 10.263264656066895, 'rank': 1, 'size': 19, 'values': [10.263264656066895, 19.0], 'weights': [-1.0, -1.0], 'wvalues': [-10.263264656066895, -19.0]}\n"
      ]
     }
    ],
@@ -256,78 +256,78 @@
      "output_type": "stream",
      "text": [
       "Generation 1/10 [//////                                            ]\n",
-      "Train Loss (Med): 0.54850 (0.69315)\n",
-      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Train Loss (Med): 0.54853 (0.69315)\n",
+      "Val Loss (Med): 0.54853 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
       "Median complexity (Max): 128 (38816)\n",
-      "Time (s): 0.28640\n",
+      "Time (s): 0.57865\n",
       "\n",
       "Generation 2/10 [///////////                                       ]\n",
-      "Train Loss (Med): 0.54850 (0.69315)\n",
-      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Train Loss (Med): 0.54853 (0.69315)\n",
+      "Val Loss (Med): 0.54853 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
-      "Median complexity (Max): 128 (38816)\n",
-      "Time (s): 0.48293\n",
+      "Median complexity (Max): 80 (38816)\n",
+      "Time (s): 1.06859\n",
       "\n",
       "Generation 3/10 [////////////////                                  ]\n",
-      "Train Loss (Med): 0.54850 (0.69315)\n",
-      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Train Loss (Med): 0.54848 (0.69315)\n",
+      "Val Loss (Med): 0.54848 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
-      "Median complexity (Max): 128 (38816)\n",
-      "Time (s): 0.67786\n",
+      "Median complexity (Max): 80 (3488)\n",
+      "Time (s): 1.65607\n",
       "\n",
       "Generation 4/10 [/////////////////////                             ]\n",
-      "Train Loss (Med): 0.54850 (0.69315)\n",
-      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Train Loss (Med): 0.54848 (0.69315)\n",
+      "Val Loss (Med): 0.54848 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
-      "Median complexity (Max): 128 (38816)\n",
-      "Time (s): 0.85627\n",
+      "Median complexity (Max): 80 (3488)\n",
+      "Time (s): 2.06872\n",
       "\n",
       "Generation 5/10 [//////////////////////////                        ]\n",
-      "Train Loss (Med): 0.54847 (0.69315)\n",
-      "Val Loss (Med): 0.54847 (0.69315)\n",
+      "Train Loss (Med): 0.54848 (0.69315)\n",
+      "Val Loss (Med): 0.54848 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
-      "Median complexity (Max): 128 (38816)\n",
-      "Time (s): 1.05582\n",
+      "Median complexity (Max): 80 (2720)\n",
+      "Time (s): 2.53507\n",
       "\n",
       "Generation 6/10 [///////////////////////////////                   ]\n",
-      "Train Loss (Med): 0.54850 (0.69315)\n",
-      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Train Loss (Med): 0.54848 (0.69315)\n",
+      "Val Loss (Med): 0.54848 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
-      "Median complexity (Max): 128 (38816)\n",
-      "Time (s): 1.24256\n",
+      "Median complexity (Max): 80 (2720)\n",
+      "Time (s): 2.94055\n",
       "\n",
       "Generation 7/10 [////////////////////////////////////              ]\n",
-      "Train Loss (Med): 0.54850 (0.69315)\n",
-      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Train Loss (Med): 0.54848 (0.69315)\n",
+      "Val Loss (Med): 0.54848 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
-      "Median complexity (Max): 80 (38816)\n",
-      "Time (s): 1.42772\n",
+      "Median complexity (Max): 80 (2720)\n",
+      "Time (s): 3.28395\n",
       "\n",
       "Generation 8/10 [/////////////////////////////////////////         ]\n",
-      "Train Loss (Med): 0.54850 (0.69315)\n",
-      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Train Loss (Med): 0.54848 (0.69315)\n",
+      "Val Loss (Med): 0.54848 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
-      "Median complexity (Max): 80 (38816)\n",
-      "Time (s): 1.60531\n",
+      "Median complexity (Max): 80 (2720)\n",
+      "Time (s): 3.66996\n",
       "\n",
       "Generation 9/10 [//////////////////////////////////////////////    ]\n",
-      "Train Loss (Med): 0.54850 (0.69315)\n",
-      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Train Loss (Med): 0.54848 (0.69315)\n",
+      "Val Loss (Med): 0.54848 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
-      "Median complexity (Max): 80 (38816)\n",
-      "Time (s): 1.79592\n",
+      "Median complexity (Max): 80 (2720)\n",
+      "Time (s): 4.03734\n",
       "\n",
       "Generation 10/10 [//////////////////////////////////////////////////]\n",
-      "Train Loss (Med): 0.54850 (0.69315)\n",
-      "Val Loss (Med): 0.54850 (0.69315)\n",
+      "Train Loss (Med): 0.54848 (0.69315)\n",
+      "Val Loss (Med): 0.54848 (0.69315)\n",
       "Median Size (Max): 5 (12)\n",
-      "Median complexity (Max): 80 (38816)\n",
-      "Time (s): 2.00546\n",
+      "Median complexity (Max): 80 (2720)\n",
+      "Time (s): 4.36560\n",
       "\n",
-      "Saved population to file /tmp/tmp02qi2xms/population.json\n",
+      "Saved population to file /tmp/tmp35coly_6/population.json\n",
       "saving final population as archive...\n",
-      "Best model: Logistic(Sum(-0.44824797,If(AIDS>15890.50,8.96,0.00)))\n",
+      "Best model: Logistic(Sum(-0.44628695,If(AIDS>15890.50,9.96,0.00 (MeanLabel))))\n",
       "score: 0.68\n"
      ]
     }
@@ -389,10 +389,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded population from /tmp/tmp02qi2xms/population.json of size = 400\n",
+      "Loaded population from /tmp/tmp35coly_6/population.json of size = 400\n",
       "Completed 100% [====================]\n",
-      "Best model: Logistic(Sum(10.211154,If(AIDS>15890.50,1.00 (MeanLabel),0.00 (MeanLabel))))\n",
-      "score: 0.5\n"
+      "Best model: Logistic(Sum(-0.6531352,-0.02*Add(-4.84,-0.04*AIDS)))\n",
+      "score: 0.58\n"
      ]
     }
    ],
@@ -431,7 +431,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitness(0.610935 1952.000000 )\n"
+      "Fitness(0.533047 13088.000000 )\n"
      ]
     }
    ],
@@ -448,7 +448,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6799999999999999"
+       "0.7521187586361797"
       ]
      },
      "execution_count": 9,
@@ -891,7 +891,7 @@
        "                functions=[&#x27;SplitBest&#x27;, &#x27;Add&#x27;, &#x27;Mul&#x27;, &#x27;Sin&#x27;, &#x27;Cos&#x27;, &#x27;Exp&#x27;,\n",
        "                           &#x27;Logabs&#x27;],\n",
        "                initialization=&#x27;uniform&#x27;,\n",
-       "                load_population=&#x27;/tmp/tmp02qi2xms/population.json&#x27;, logfile=&#x27;&#x27;,\n",
+       "                load_population=&#x27;/tmp/tmp35coly_6/population.json&#x27;, logfile=&#x27;&#x27;,\n",
        "                max_depth=3, max_gens=10, max_size=20, max_stall=0, max_time=-1,\n",
        "                mig_prob=0.05, mode=&#x27;classification&#x27;,\n",
        "                m...\n",
@@ -907,7 +907,7 @@
        "                functions=[&#x27;SplitBest&#x27;, &#x27;Add&#x27;, &#x27;Mul&#x27;, &#x27;Sin&#x27;, &#x27;Cos&#x27;, &#x27;Exp&#x27;,\n",
        "                           &#x27;Logabs&#x27;],\n",
        "                initialization=&#x27;uniform&#x27;,\n",
-       "                load_population=&#x27;/tmp/tmp02qi2xms/population.json&#x27;, logfile=&#x27;&#x27;,\n",
+       "                load_population=&#x27;/tmp/tmp35coly_6/population.json&#x27;, logfile=&#x27;&#x27;,\n",
        "                max_depth=3, max_gens=10, max_size=20, max_stall=0, max_time=-1,\n",
        "                mig_prob=0.05, mode=&#x27;classification&#x27;,\n",
        "                m...\n",
@@ -926,7 +926,7 @@
        "                functions=['SplitBest', 'Add', 'Mul', 'Sin', 'Cos', 'Exp',\n",
        "                           'Logabs'],\n",
        "                initialization='uniform',\n",
-       "                load_population='/tmp/tmp02qi2xms/population.json', logfile='',\n",
+       "                load_population='/tmp/tmp35coly_6/population.json', logfile='',\n",
        "                max_depth=3, max_gens=10, max_size=20, max_stall=0, max_time=-1,\n",
        "                mig_prob=0.05, mode='classification',\n",
        "                m...\n",
@@ -982,15 +982,15 @@
      "output_type": "stream",
      "text": [
       "[ True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True]\n",
+      "  True  True  True False  True  True False False False False False False\n",
+      " False False  True  True  True  True  True  True  True  True  True False\n",
+      "  True  True  True  True False False False False False False False False\n",
+      " False False]\n",
       "[ True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True]\n"
+      "  True  True  True False  True  True False False False False False False\n",
+      " False False  True  True  True  True  True  True  True  True  True False\n",
+      "  True  True  True  True False False False False False False False False\n",
+      " False False]\n"
      ]
     }
    ],
@@ -1008,18 +1008,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 505, 'y_pred': array([False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False])}\n",
-      "{'id': 505, 'y_pred': array([False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False, False, False, False, False,\n",
-      "       False, False, False, False, False])}\n"
+      "{'id': 541, 'y_pred': array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True])}\n",
+      "{'id': 541, 'y_pred': array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+      "        True,  True,  True,  True,  True])}\n"
      ]
     }
    ],
