Updated notebook outputs

--- a/docs/guide/search_space.ipynb
+++ b/docs/guide/search_space.ipynb
@@ -180,11 +180,12 @@
    "outputs": [],
    "source": [
     "user_ops = {\n",
-    "    'Add': 0.5,\n",
-    "    'Sub': 0.5,\n",
-    "    'Mul': 1.0,\n",
-    "    'Div': 0.1,\n",
-    "    'SplitBest':0.2\n",
+    "    # 'Add': 0.5,\n",
+    "    # 'Sub': 0.5,\n",
+    "    # 'Mul': 1.0,\n",
+    "    # 'Div': 0.1,\n",
+    "    'SplitBest':0.1,\n",
+    "    'SplitOn':0.1\n",
     "}\n",
     "\n",
     "search_space = SearchSpace(data, user_ops)\n"
@@ -217,15 +218,20 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00 (MeanLabel)\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623, 0.056145623]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
+      "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
+      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "\n"
      ]
     }
@@ -263,15 +269,20 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00 (MeanLabel)\"]}\n",
-      "terminal_weights: {\"ArrayI\": [1, 1], \"ArrayB\": [1, 1], \"ArrayF\": [1, 1, 1]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
+      "terminal_weights: {\"ArrayI\": [1, 1], \"ArrayB\": [1, 1], \"ArrayF\": [1, 1]}\n",
+      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "\n"
      ]
     }
@@ -313,15 +324,20 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00 (MeanLabel)\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623, 0.056145623]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.2\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.2\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 1\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.5\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.5\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
+      "terminal_weights: {\"ArrayI\": [0.01214596, 0.01214596], \"ArrayB\": [0.026419641, 0.026419641], \"ArrayF\": [0.056145623, 0.056145623]}\n",
+      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.1\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.1\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.1\n",
       "\n"
      ]
     }
@@ -367,8 +383,8 @@
      "text": [
       "Completed 100% [====================]\n",
       "saving final population as archive...\n",
-      "Best model: If(x_0>0.50,If(x_0>1.50,8.22 (MeanLabel),5.77 (MeanLabel)),9.04 (MeanLabel))\n",
-      "score: 0.005547028016814393\n"
+      "Best model: If(x_0>0.50,If(x_0>1.50,8.22,5.77),9.04)\n",
+      "score: 0.005547027478181699\n"
      ]
     }
    ],
@@ -380,7 +396,7 @@
     "    max_gens=20,\n",
     "    objectives=[\"error\", \"linear_complexity\"],\n",
     "    weights_init=True,\n",
-    "    bandit=\"thompson\",\n",
+    "    bandit=\"dynamic_thompson\",\n",
     "    verbosity=1\n",
     ")\n",
     "\n",
@@ -401,21 +417,48 @@
      "output_type": "stream",
      "text": [
       "=== Search space ===\n",
-      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\", \"1.00 (MeanLabel)\"]}\n",
-      "terminal_weights: {\"ArrayI\": [0.1543845, 0.19821535], \"ArrayB\": [0.7745126, 0.5535547], \"ArrayF\": [0.063646674, 0.10489941, 0.4337296]}\n",
-      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.47412002\n",
-      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.639789\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.27693656\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Div] = 1.00*Div, weight = 0.01410815\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Mul] = 1.00*Mul, weight = 0.09998686\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Sub] = 1.00*Sub, weight = 0.078102015\n",
-      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][Add] = 1.00*Add, weight = 0.33191082\n",
+      "terminal_map: {\"ArrayI\": [\"x_2\", \"1.00\"], \"ArrayB\": [\"x_1\", \"1.00\"], \"ArrayF\": [\"x_0\", \"1.00\"]}\n",
+      "terminal_weights: {\"ArrayI\": [0.1347899, 0.42220494], \"ArrayB\": [0.0915509, 0.41956714], \"ArrayF\": [0.01, 0.014537098]}\n",
+      "node_map[ArrayB][[\"ArrayI\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.50947785\n",
+      "node_map[ArrayB][[\"ArrayF\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.52286035\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\", \"ArrayB\"]][SplitOn] = SplitOn, weight = 0.12932986\n",
+      "node_map[ArrayB][[\"ArrayB\", \"ArrayB\"]][SplitBest] = SplitBest, weight = 0.22320744\n",
+      "node_map[ArrayI][[\"ArrayB\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.5294247\n",
+      "node_map[ArrayI][[\"ArrayF\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.2962465\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\", \"ArrayI\"]][SplitOn] = 1.00*SplitOn, weight = 0.6646117\n",
+      "node_map[ArrayI][[\"ArrayI\", \"ArrayI\"]][SplitBest] = 1.00*SplitBest, weight = 0.733612\n",
+      "node_map[ArrayF][[\"ArrayB\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.13904911\n",
+      "node_map[ArrayF][[\"ArrayI\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.23858666\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\", \"ArrayF\"]][SplitOn] = 1.00*SplitOn, weight = 0.10248854\n",
+      "node_map[ArrayF][[\"ArrayF\", \"ArrayF\"]][SplitBest] = 1.00*SplitBest, weight = 0.03489412\n",
       "\n"
      ]
     }
    ],
    "source": [
     "est.engine_.search_space.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e876b1c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If(x_0>0.50)\n",
+      "|- If(x_0>1.50)\n",
+      "|  |- 8.22\n",
+      "|  |- 5.77\n",
+      "|- 9.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(est.best_estimator_.get_model(\"tree\"))"
    ]
   },
   {
@@ -431,7 +474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "brush",
    "language": "python",
    "name": "python3"
   },
